# PhytoGenes

./: .gitignore  LICENSE  README.md  docker-compose.yml  init_files.py  pyproject.toml
scripts/: init_db.py  run_agent.py
src/agent/: core.py  router.py  workflow.py
src/database/: connection.py  crud.py  models.py  schemas.py
src/infrastructure/crawler/: browser.py  parser.py  proxy.py
src/infrastructure/crawler/strategies/: generic.py  tair.py
src/mcp_servers/: api_fetchers.py  main_server.py  scholar.py  web_scrapers.py
