[project]
name = "phytogenes"
version = "0.1.0"
description = "Plant Genes Knowledge Agent based on Pydantic-AI and FastMCP"
authors = [{name = "Bojin-Z", email = "your.email@example.com"}]
requires-python = ">=3.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
